update on resume links, profile photo, and responsive look

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <h2> Work Experience </h2>
             <div class="experience">
-                <h3>User Interface Designer </h3> 
+                <h3>User Interface Developer </h3> 
                 <h4>Zedos Technology - Abuja, Nigeria </h4>
                 <p>February 2021 - Till Date </p>
                 <ul>
