update on resume links, profile photo, and responsive look

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <h1 class="my-name"> Chuka J. Ndukwe </h1>
         <h1 class="my-title"> Front-End Developer </h1>
-        <a target ="_blank"> <img src="https://github.com/chukadiy/online-resume/blob/master/img/chuka.jpg"> </a>
+        <a target ="_blank"> <img src="img/chuka.jpg"> </a>
 
     </header>
     <div class="introductions">
