update on school link

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             <h2> Education </h2>
             <div class="experience">
                 <h3>Msc. Engineering Management </h3>
-                <a href="http://ebs.esut.edu.ng/"><h4>Enugu State University of Science and Technology, Nigeria</h4></a>
+                <h4>Enugu State University of Science and Technology, Nigeria</h4>
                 <p>November 2019 - December 2020 </p>
                 <h5 class="studies"> Research Methodology, Telecomms Planning and Mgt. ,Marketing Mgt. and Strategy, Maintenance Sys. Engineering, Industrial Relations, Simulations and Modelling Techniques, Corporate Financial Mgt, Among Others.</h5>
             </div>
 
             <div class="experience">
                 <h3>B.Eng Information and Communication </h3>
-                <a href ="https://www.covenantuniversity.edu.ng/"><h4>Covenant University, Ogun State, Nigeria </h4></a>
+                <h4>Covenant University, Ogun State, Nigeria </h4>
                 <p>November 2009 - June 2014 </p>
                 <h5 class="studies"> Software Dev. Techniques, Internet Technology, and Programming, Probability and Statistics, Data Communication and
                 Computer Networks, Computer Organization, and Architecture, Among others.</h5>
