simple little adjustments

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h3>Msc. Engineering Management </h3>
                 <h4>Enugu State University of Science and Technology, Nigeria</h4>
                 <p>November 2019 - December 2020 </p>
-                <h5 class="studies"> Research Methodology, Telecomms Planning and Mgt. ,Marketing Mgt. and Strategy, Maintenance Sys. Engineering, Industrial Relations, Simulations and Modelling Techniques, Corporate Financial Mgt, Among Others.</h5>
+                <h5 class="studies"> Research Methodology, Telecomms Planning and Mgt., Marketing Mgt. and Strategy, Maintenance Sys. Engineering, Industrial Relations, Simulations and Modelling Techniques, Corporate Financial Mgt, Among Others.</h5>
             </div>
 
             <div class="experience">
@@ -102,9 +102,9 @@
         <div class="experience">
             <h2> Certifications </h2>
             <ul> 
-                <li>Introduction to Systems Engineering <span class = "links">Coursera</span></li>
-                <li>Oracle Certified Java Associate SE 7 <span class ="links">HiiT</span></li>
-                <li>Responsive Web Design</li><span class ="links">freecodecamp</span></li>
+                <li>Introduction to Systems Engineering <p class = "links">Coursera</p></li>
+                <li>Oracle Certified Java Associate SE 7 <p class ="links">HiiT</p></li>
+                <li>Responsive Web Design</li><p class ="links">freecodecamp</p></li>
             </ul>
         </div>
 
